# srt-sender-app

./: .gitignore  README.md  gradle.properties  release.jks.base64  settings.gradle.kts
.github/workflows/: android-release.yml
app/: build.gradle.kts  google-services.json.base64  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  MpegTsMuxer.cpp  MpegTsMuxer.h  SrtTransport.cpp  SrtTransport.h  native-lib.cpp
app/src/main/java/com/example/srtsender/: BootReceiver.kt  FirebaseManager.kt  GpsFirebaseManager.kt  LoginActivity.kt  MainActivity.kt  SettingsActivity.kt  StreamingService.kt  UpdateManager.kt  VoiceReceiver.kt
app/src/main/res/drawable/: card_background.xml  card_background_menu.xml
app/src/main/res/layout/: activity_login.xml  activity_main.xml  activity_settings.xml  dialog_about.xml  dialog_configuration.xml  dialog_device_info.xml  dialog_network_status.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
